--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,13 @@
 asgiref==3.4.1
+certifi==2022.9.24
+charset-normalizer==2.1.1
+DingtalkChatbot==1.5.3
 Django==4.0.1
 django-grappelli==3.0.3
 django-python3-ldap==0.15.3
+idna==3.4
 ldap3==2.9.1
 pyasn1==0.4.8
+requests==2.28.1
 sqlparse==0.4.2
+urllib3==1.26.12
