--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ DingtalkChatbot==1.5.3
 Django==4.0.1
 django-grappelli==3.0.3
 django-python3-ldap==0.15.3
+django-registration-redux==2.11
 idna==3.4
 ldap3==2.9.1
 pyasn1==0.4.8
