--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
 asgiref==3.4.1
+beautifulsoup4==4.11.1
 certifi==2022.9.24
 charset-normalizer==2.1.1
 DingtalkChatbot==1.5.3
 Django==4.0.1
+django-bootstrap4==22.2
 django-grappelli==3.0.3
 django-python3-ldap==0.15.3
 django-registration-redux==2.11
@@ -10,5 +12,6 @@ idna==3.4
 ldap3==2.9.1
 pyasn1==0.4.8
 requests==2.28.1
+soupsieve==2.3.2.post1
 sqlparse==0.4.2
 urllib3==1.26.12
