--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,51 @@
+amqp==5.1.1
 asgiref==3.4.1
+async-timeout==4.0.2
 beautifulsoup4==4.11.1
+billiard==3.6.4.0
+celery==5.2.7
 certifi==2022.9.24
+cffi==1.15.1
 charset-normalizer==2.1.1
+click==8.1.3
+click-didyoumean==0.3.0
+click-plugins==1.1.1
+click-repl==0.2.0
+cryptography==38.0.3
+Deprecated==1.2.13
 DingtalkChatbot==1.5.3
 Django==4.0.1
 django-bootstrap4==22.2
+django-filter==22.1
 django-grappelli==3.0.3
 django-python3-ldap==0.15.3
+django-redis==5.2.0
 django-registration-redux==2.11
+djangorestframework==3.14.0
+flower==1.2.0
+humanize==4.4.0
 idna==3.4
+importlib-metadata==5.0.0
+kombu==5.2.4
 ldap3==2.9.1
+Markdown==3.4.1
+msgpack==1.0.4
+packaging==21.3
+prometheus-client==0.15.0
+prompt-toolkit==3.0.32
 pyasn1==0.4.8
+pycparser==2.21
+pyparsing==3.0.9
+pytz==2022.6
+redis==4.3.4
 requests==2.28.1
+sentry-sdk==1.10.1
+six==1.16.0
 soupsieve==2.3.2.post1
 sqlparse==0.4.2
+tornado==6.2
 urllib3==1.26.12
+vine==5.0.0
+wcwidth==0.2.5
+wrapt==1.14.1
+zipp==3.10.0
