--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
+aliyun-python-sdk-core==2.13.36
+aliyun-python-sdk-kms==2.16.0
 amqp==5.1.1
 asgiref==3.4.1
 async-timeout==4.0.2
@@ -11,31 +13,41 @@ click==8.1.3
 click-didyoumean==0.3.0
 click-plugins==1.1.1
 click-repl==0.2.0
+crcmod==1.7
 cryptography==38.0.3
 Deprecated==1.2.13
 DingtalkChatbot==1.5.3
 Django==4.0.1
 django-bootstrap4==22.2
+django-celery-beat==2.4.0
 django-filter==22.1
 django-grappelli==3.0.3
+django-oss-storage==1.1.1
 django-python3-ldap==0.15.3
 django-redis==5.2.0
 django-registration-redux==2.11
+django-timezone-field==5.0
 djangorestframework==3.14.0
 flower==1.2.0
 humanize==4.4.0
 idna==3.4
 importlib-metadata==5.0.0
+jmespath==0.10.0
 kombu==5.2.4
 ldap3==2.9.1
 Markdown==3.4.1
 msgpack==1.0.4
+oss2==2.16.0
 packaging==21.3
+Pillow==9.3.0
 prometheus-client==0.15.0
 prompt-toolkit==3.0.32
 pyasn1==0.4.8
 pycparser==2.21
+pycryptodome==3.15.0
 pyparsing==3.0.9
+python-crontab==2.6.0
+python-dateutil==2.8.2
 pytz==2022.6
 redis==4.3.4
 requests==2.28.1
@@ -44,6 +56,7 @@ six==1.16.0
 soupsieve==2.3.2.post1
 sqlparse==0.4.2
 tornado==6.2
+tzdata==2022.6
 urllib3==1.26.12
 vine==5.0.0
 wcwidth==0.2.5
