--- a/requirements.txt
+++ b/requirements.txt
@@ -20,12 +20,14 @@ DingtalkChatbot==1.5.3
 Django==4.0.1
 django-bootstrap4==22.2
 django-celery-beat==2.4.0
+django-debug-toolbar==3.7.0
 django-filter==22.1
 django-grappelli==3.0.3
 django-oss-storage==1.1.1
 django-python3-ldap==0.15.3
 django-redis==5.2.0
 django-registration-redux==2.11
+django-simpleui==2022.7.29
 django-timezone-field==5.0
 djangorestframework==3.14.0
 flower==1.2.0
@@ -37,6 +39,7 @@ kombu==5.2.4
 ldap3==2.9.1
 Markdown==3.4.1
 msgpack==1.0.4
+mysqlclient==2.1.1
 oss2==2.16.0
 packaging==21.3
 Pillow==9.3.0
