--- a/requirements.txt
+++ b/requirements.txt
@@ -24,6 +24,7 @@ django-debug-toolbar==3.7.0
 django-filter==22.1
 django-grappelli==3.0.3
 django-oss-storage==1.1.1
+django-prometheus==2.2.0
 django-python3-ldap==0.15.3
 django-redis==5.2.0
 django-registration-redux==2.11
