--- a/requirements.txt
+++ b/requirements.txt
@@ -26,8 +26,11 @@ django-grappelli==3.0.3
 django-oss-storage==1.1.1
 django-prometheus==2.2.0
 django-python3-ldap==0.15.3
+django-ranged-response==0.2.0
+django-ratelimit==3.0.1
 django-redis==5.2.0
 django-registration-redux==2.11
+django-simple-captcha==0.5.17
 django-simpleui==2022.7.29
 django-timezone-field==5.0
 djangorestframework==3.14.0
